fix: docs_to_index_path fixed

--- a/src/config/paths.yaml
+++ b/src/config/paths.yaml
@@ -1,5 +1,5 @@
 # Documents to index path
-docs_to_index_path: 'C:\mii\MII_RAG_2025\docs'
+docs_to_index_path: 'C:/path/to/docs'
 
 # Persisted Index path
 persisted_index_path: '../persisted_index'
