chore: README.md added

--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,8 @@
+# Usa Azure en vez de OpenAI estandar
+USE_AZURE_OPENAI = False
+
+# Azure OpenAI
+AZURE_OPENAI_API_KEY = '...'
+
 # OpenAI (estandar)
 OPENAI_API_KEY = 'sk-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx'
